# bankstract

./: .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  parser-drift.yml  parser-request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: bump-version.sh  regen-encrypted-fixtures.py
src/bankstract/: __init__.py  _api.py  _layout.py  _pdfplumber.py  _progress.py  _pymupdf.py  _source.py  _xlsx.py  cli.py  reconcile.py  schema.py
src/bankstract/parsers/: __init__.py  _columnar.py  _common.py  _money.py  base.py  fbn.py  opay.py  palmpay.py  zenith.py
src/bankstract/redactors/: __init__.py  _shared.py  base.py  fbn.py  opay.py  palmpay.py  zenith.py
src/bankstract/writers/: csv.py  json.py
tests/: conftest.py  test_auto.py  test_cli_stdin.py  test_lib_api.py  test_palmpay.py  test_progress.py  test_reconcile.py  test_redactor_palmpay.py  test_typed_errors.py  test_writers_json.py
tests/fbn/: test_parser.py  test_redactor.py
tests/fixtures/: encrypted_sample.xlsx
tests/opay/: test_parser.py  test_redactor.py
tests/opay/fixtures/: sample.xlsx
tests/palmpay/: test_parser.py  test_redactor.py
tests/zenith/: test_parser.py  test_redactor.py
