[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bankstract"
version = "0.1.0"
description = "Convert Nigerian bank PDF statements into structured CSV."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Jeffery Orazulike" }]
keywords = ["pdf", "csv", "bank", "statement", "nigeria"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.11",
    "pydantic>=2.6",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
camelot = ["camelot-py[cv]>=0.11"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "build>=1.0",
]

[project.scripts]
bankstract = "bankstract.cli:main"

[project.urls]
Homepage = "https://github.com/logickoder/bankstract"
Issues = "https://github.com/logickoder/bankstract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bankstract"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "PRD.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pymupdf>=1.27.2.3",
    "pyright>=1.1.410",
]
