[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bankstract"
version = "0.7.0"
description = "Convert Nigerian bank PDF statements into structured CSV."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Jeffery Orazulike" }]
keywords = ["pdf", "csv", "bank", "statement", "nigeria"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "click>=8.1",
    "pdfplumber>=0.11",
    "pydantic>=2.6",
    "pymupdf>=1.27.2",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
camelot = ["camelot-py[cv]>=0.11"]

[project.scripts]
bankstract = "bankstract.cli:main"

[project.urls]
Homepage = "https://github.com/logickoder/bankstract"
Issues = "https://github.com/logickoder/bankstract/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bankstract"]

[tool.hatch.build.targets.sdist]
# Fixture PDFs in tests/ are dev-only redacted samples; exclude from the
# published sdist to keep the upload lean.
include = ["src", "README.md", "LICENSE", "PRD.md", "pyproject.toml", "uv.lock"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "build>=1.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.410",
    "pytest>=8.0",
    "ruff>=0.5",
]
